<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/previewView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:contentDescription="@string/label_preview_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#E0E0E0"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="left|center_horizontal"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_back"
            android:src="@drawable/ic_back" />

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="left|center_horizontal"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_share"
            android:src="@drawable/ic_share" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="left|center_horizontal"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_delete"
            android:src="@drawable/ic_delete" />
    </LinearLayout>

</RelativeLayout>