<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/locationFullView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:background="#FF0000"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/labelAltitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_altitude"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/valueAltitude"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/labelLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_longitude"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/valueLongitude"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/labelLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_latitude"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/valueLatitude"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/labelCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_country"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/valueCountry"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/labelProvince"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_province"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/valueProvince"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/labelCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_city"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/valueCity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/labelPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_place"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/valuePlace"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/labelDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_datetime"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/valueDateTime"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/labelGPS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_gps"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/valueGPS"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>

        <com.amap.api.maps2d.MapView
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.50" >

        </com.amap.api.maps2d.MapView>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="6dp"
            android:layout_gravity="right|center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_back"
            android:src="@drawable/ic_back" />
    </LinearLayout>

</RelativeLayout>